#55 radio focus contrast resolved

--- a/less/custom/theme-extras.less
+++ b/less/custom/theme-extras.less
@@ -661,8 +661,8 @@ video::cue {
 
 // secondary focus for radio buttons
 .mcq-component .mcq-item label.selected .mcq-answer-icon.radio:before{
-    background-color: lighten(@esdc-pink, 20%);
-    border: 1px solid lighten(@esdc-pink, 20%);
+    background-color: lighten(@esdc-pink, 40%);
+    border: 1px solid lighten(@esdc-pink, 40%);
     border-radius: 1em;
     color: @esdc-white;
 }
